# miniflux-noninteresting-as-read

./: .env.example  README.md  TODO.md  ecosystem.config.js  feeds.yaml  pyproject.toml
docs/plans/: Tighten-README.md
logrotate.d/: miniflux-ai-filter
scripts/: calibrate.py
src/miniflux_ai_filter/: __init__.py  __main__.py  classifier.py  config.py  feeds_config.py  jsonl_logger.py  logging.py  main.py  miniflux.py  models.py  opencodego.py  openrouter.py  protocols.py
tests/: __init__.py  conftest.py  test_classifier.py  test_config.py  test_feeds_config.py  test_integration.py  test_logging.py  test_miniflux.py  test_opencodego.py  test_openrouter.py
