[project]
name = "miniflux-noninteresting-as-read"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
